--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Create new Post</h1>
-    <form method="POST" action="">
+    <form method="POST" action="{% url 'post-create' %}" enctype="multipart/form-data">
       {% csrf_token %}
       {{form.as_p}}
       <input type="hidden" name="timezone" id="user-timezone" value="">
