--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -1,5 +1,5 @@
 <h1>Edit Post</h1>
-<form action="" method="POST">
+<form action="" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   {{form.as_p}}
   <button type="submit">Save</button>
