--- a/blog/templates/blog/profile_form.html
+++ b/blog/templates/blog/profile_form.html
@@ -1,5 +1,5 @@
 <h2>Create Your Profile</h2>
-<form action="{% url 'profile-create' %}" method="POST">
+<form action="{% url 'profile-create' %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Create</button>
