Commit 4.3: Implemented edit profile function view with multiple forms

--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -4,7 +4,7 @@
   <meta http-equiv="refresh" content="0; URL={% url 'profile-create' %}">
 {% else %}
   <h2>Welcome {{user.username}}!</h2>
-<form action="{% url 'profile-update'%}" method="GET">
+<form action="{% url 'profile-update' user.profile.pk %}" method="GET">
   <button type="submit">Edit Profile</button>
 </form>
   {% if user.profile.profile_picture %}
