Commit 4.5: Implemented error message to existing username in Users edit profile

--- a/blog/templates/blog/profile_update.html
+++ b/blog/templates/blog/profile_update.html
@@ -9,3 +9,10 @@
   {% csrf_token %}
   <button type="submit">Cancel</button>
 </form>
+{% if messages %}
+  <ul class="messages">
+  {% for message in messages %}
+    <li>{{ message }}</li>
+  {% endfor %}
+  </ul>
+{% endif %}
