--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,8 +1,13 @@
 <h1>Please login</h1>
+{% for message in messages %}
+    <div class="message {{ message.tag }}">
+        <strong>{{ message }}</strong>
+    </div>
+{% endfor %}
 <form action="" method="post">
   {% csrf_token %}
     {{ login_form.as_p }}
-  <input type="submit" value="Log In"></input>
+  <input type="submit" value="Log In">
   <p>Forgot Password? <a href="{% url 'password_reset' %}">Click here</a></p>
   <p>Don't have an account? <a href="{% url 'signup' %}">Sign up</a></p>
 </form>
