--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -1,9 +1,14 @@
+{% extends 'blog/_base.html' %}
+{% block content %}
 {% load static %}
 
 {% if not user.profile %}
   <meta http-equiv="refresh" content="0; URL={% url 'profile-create' %}">
 {% else %}
   <h2>Welcome {{user.username}}!</h2>
+<form action="" method="GET">
+  <input type="text" placeholder="Search">
+</form>
 <form action="{% url 'profile-update' user.profile.pk %}" method="GET">
   <button type="submit">Edit Profile</button>
 </form>
@@ -43,3 +48,4 @@
     {% endfor %}
   </ul>
 {% endif %}
+{% endblock %}
