Commit 5.1: Implementing external user search and external user profile view

--- a/blog/templates/blog/search_profile.html
+++ b/blog/templates/blog/search_profile.html
@@ -2,11 +2,13 @@
 {% block content %}
     {% if search %}
     	<h2>These are your matches for "{{ search }}"</h2>
+        <ul>
         {% for profile in profiles %}
-            <ul>
-            <li>{{ profile }}</li>
-            </ul>
+            <a href="{% url 'external-user-profile' profile %}">{{ profile }}</a>
+        {% empty %}
+            No profiles found
         {% endfor %}
+        </ul>
     {% else %}
         <h2>You can't search for nothing</h2>
     {% endif %} 
