--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -6,13 +6,17 @@
   <meta http-equiv="refresh" content="0; URL={% url 'profile-create' %}">
 {% else %}
   <h2>Welcome {{user.username}}!</h2>
-<form action="{% url 'search_profile' %}" method="POST">
+<form action="{% url 'dashboard' %}" method="POST">
 {% csrf_token %}
-  <input type="text" placeholder="Search Profile" name="search-profile">
+  <input type="text" placeholder="Search for Profiles" name="search-profile">
     <button type="submit">Search</button>
 </form>
 <form action="{% url 'profile-update' user.profile.pk %}" method="GET">
   <button type="submit">Edit Profile</button>
+</form>
+<form action="{% url 'logout' %}" method="POST">
+  {% csrf_token %}
+  <button type="submit" value="Logout">Log Out</button>
 </form>
   {% if user.profile.profile_picture %}
       <img src="{{ user.profile.profile_picture.url }}"
@@ -21,18 +25,17 @@
       <img src="{% static 'blog/default.jpg' %}"
         alt="{{ user.username }}">
   {% endif %}
+  <p><strong>{{user.first_name}} {{user.last_name}}</strong></p>
   <p>Bio: {{user.profile.bio}}</p>
   <a href="{% url 'post-create' %}">Add New Post</a>
-  <br>
-  <br>
-  <form action="{% url 'logout' %}" method="POST">
-    {% csrf_token %}
-    <button type="submit" value="Logout">Log Out</button>
-  </form>
-  <p>These are your posts</p>
+  {% if posts %}
+    <p>These are your posts</p>
+    <hr>
+  {% else %}
+    <p>You haven't post anything yet</p>
+  {% endif %}
   <ul>
     {% for post in posts %}
-    <hr>
     <li>Title: {{post.title}} </li>
     {% if post.img %}
       <img src="{{post.img.url}}" alt="{{post.title}}">
