--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -1,6 +1,6 @@
 <h1>Delete Post</h1>
 <h3>Are you sure that you want to delete this Post?</h3>
-<p>{{post.title}}</p>
+<p>Post Title: <strong>{{post.title}}</strong></p>
 <form action="" method="POST">
   {% csrf_token %}
   <button type="submit">Delete</button>
