--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -54,7 +54,11 @@
     <li>Description: {{post.description}}</li>
     <form action="{% url 'post-like' post.pk%}" method="POST">
       {% csrf_token %}
-      <button type="submit" name="button-like" value=" {{ post.id }}">Like</button>
+      {% if user in post.likes.all %}
+      <button type="submit">Unlike</button>
+      {% else %}
+      <button type="submit">Like</button>
+      {% endif %}
     </form>
     <a href="{% url 'post-update' post.pk %}">Edit</a>
     <a href="{% url 'post-delete' post.pk %}">Delete</a>
