Commit 5.7: Implementing new like system

--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -47,18 +47,18 @@
     {% else %}
       <li>No Image Available</li>
     {% endif %}
-    <li>Likes: {{ post.total_likes }}</li>
+    <li>Likes: {{ post.likes }}</li>
     <li>Posted: {{post.posted_date}}</li>
     <li>Posted Hour(Server Time): {{post.posted_hour_server}}</li>
     <li>Posted Hour(Client Time): {{post.posted_hour_client}}</li>
     <li>Description: {{post.description}}</li>
     <form action="{% url 'post-like' post.pk%}" method="POST">
       {% csrf_token %}
-      {% if user in post.likes.all %}
+      {% if like %}
       <button type="submit">Unlike</button>
       {% else %}
       <button type="submit">Like</button>
-      {% endif %}
+      {% endif%}
     </form>
     <a href="{% url 'post-update' post.pk %}">Edit</a>
     <a href="{% url 'post-delete' post.pk %}">Delete</a>
