--- a/blog/templates/blog/external_user_profile.html
+++ b/blog/templates/blog/external_user_profile.html
@@ -33,14 +33,14 @@
     <li>Posted Hour(Server Time): {{post.posted_hour_server}}</li>
     <li>Posted Hour(Client Time): {{post.posted_hour_client}}</li>
     <li>Description: {{post.description}}</li>
-    <form action="{% url 'post-like' post.pk%}" method="POST">
+    <!-- <form action="{% url 'post-like' post.pk%}" method="POST">
       {% csrf_token %}
       {% if user in post.likes.all %}
       <button type="submit">Unlike</button>
       {% else %}
       <button type="submit">Like</button>
       {% endif %}
-    </form>
+    </form> -->
     <hr>
     {% endfor %}
   </ul>
