Commit 5.9: Added author name and link to post details

--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -41,6 +41,7 @@
   {% endif %}
   <ul>
     {% for post in posts %}
+    <li>Author: <a href="{% url 'dashboard' %}">{{user.username}}</a></li>
     <li>Title: {{post.title}} </li>
     {% if post.img %}
       <img src="{{post.img.url}}" alt="{{post.title}}" width="200px" height="200px">
