Commit 6.0: Implemented Comments Functionality

--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -48,7 +48,7 @@
     {% else %}
       <li>No Image Available</li>
     {% endif %}
-    <li>Likes: {{ post.likes }}</li>
+    <li>Likes: {{ post.likes_count }}</li>
     <li>Posted: {{post.posted_date}}</li>
     <li>Posted Hour(Server Time): {{post.posted_hour_server}}</li>
     <li>Posted Hour(Client Time): {{post.posted_hour_client}}</li>
@@ -62,6 +62,10 @@
           Like
         {% endif%}
       </button>
+    </form>
+    <form action="{% url 'comments' post.id %}" method="GET">
+      {% csrf_token %}
+      <button type="submit">Comments</button>
     </form>
     <a href="{% url 'post-update' post.pk %}">Edit</a>
     <a href="{% url 'post-delete' post.pk %}">Delete</a>
