Commit 6.2: Implementing edit and delete comment

--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -46,6 +46,8 @@
   {% csrf_token %}
   <button type="submit">Reply</button>
 </form>
+    <a href="{% url 'comment-update' %}">Edit</a>
+    <a href="">Delete</a>
 <br>
 {% endfor %}
 {% endblock %}
