Commit 6.4: Implemented Delete comments functionality

--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -30,7 +30,7 @@
 <hr>
 {% for comment in comments %}
   <li><a href="{% url 'external-user-profile' comment.user %}">{{comment.user.username}}</a>: {{comment.text}}</li>
-  <li>Posted on: {{comment.posted_date|date:"Y-m-d H:i:s"}}</li>
+  <li>Posted on: {{comment.posted_date|date:"Y-m-d | H:i:s"}}</li>
   <li>Likes: {{comment.likes_count}}</li>
 <form action="{% url 'comment-like' comment.id %}" method="POST">
   {% csrf_token %}
@@ -47,7 +47,7 @@
   <button type="submit">Reply</button>
 </form>
     <a href="{% url 'comment-update' post.id comment.id %}">Edit</a>
-    <a href="">Delete</a>
-<br>
+    <a href="{% url 'comment-delete' post.id comment.id %}">Delete</a>
+<hr>
 {% endfor %}
 {% endblock %}
