--- a/blog/templates/blog/comment_update_view.html
+++ b/blog/templates/blog/comment_update_view.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <form action="" method="POST">
+        <h2>Edit Comment</h2>
         {% csrf_token %}
         {{ comment_form.as_p }}
         <button type="submit">Update</button>
