--- a/blog/templates/blog/post_comments_view.html
+++ b/blog/templates/blog/post_comments_view.html
@@ -9,7 +9,7 @@
 {% endif %}
 <li>Author: <a href="{% url 'external-user-profile' post.owner %}">{{post.owner}}</a></li>
 <li>Likes: {{ post.likes_count }}</li>
-<li>Posted: {{post.posted_date}}</li>
+<li>Posted: {{post.posted_date|timesince}} ago</li>
 <li>Description: {{post.description}}</li>
 <form action="{% url 'post-like' post.pk %}" method="POST">
   {% csrf_token %}
@@ -29,8 +29,9 @@
 </form>
 <hr>
 {% for comment in comments %}
+{% if not comment.parent_comment %}
   <li><a href="{% url 'external-user-profile' comment.user %}">{{comment.user.username}}</a>: {{comment.text}}</li>
-  <li>Posted on: {{comment.posted_date|date:"Y-m-d | H:i:s"}}</li>
+  <li>{{comment.posted_date|timesince}} ago</li>
   <li>Likes: {{comment.likes_count}}</li>
 <form action="{% url 'comment-like' comment.id %}" method="POST">
   {% csrf_token %}
@@ -50,16 +51,27 @@
   <a href="{% url 'comment-update' post.id comment.id %}">Edit</a>
   <a href="{% url 'comment-delete' post.id comment.id %}">Delete</a>
 {% endif %}
+{% endif %}
 <br>
 {% if comment.get_replies %}
   <b>Replies:</b>
 {% for reply in comment.get_replies %}
     <div style="margin-left: 2em;">
-      <p><a href="{% url 'external-user-profile' comment.user %}">{{reply.user.username}}</a>: {{reply.text}}</p>
+      <p><a href="{% url 'external-user-profile' comment.user %}">{{reply.user.username}}</a>: {{reply.text}}<br>
+      <a href="{% url 'comment-like' reply.id%}">
+        {% if reply.id in liked_comment %}
+          Unlike
+        {% else %}
+          Like
+        {% endif%}
+      </a> - Likes: {{reply.likes_count}}<br>
+      {{reply.posted_date|timesince}} ago
       {% if request.user == reply.user %}
         <a href="{% url 'comment-update' post.id reply.id %}">Edit</a>
         <a href="{% url 'comment-delete' post.id reply.id %}">Delete</a>
       {% endif %}
+      
+      </p>
     </div>
 {% endfor %}
 {% endif %}
