--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -2,9 +2,6 @@
 {% block content %}
 {% load static %}
 
-{% if not user.profile %}
-  <meta http-equiv="refresh" content="0; URL={% url 'profile-create' %}">
-{% else %}
   <h2>Welcome {{user.username}}!</h2>
 <form action="{% url 'dashboard' %}" method="POST">
 {% csrf_token %}
@@ -16,6 +13,9 @@
   <input type="text" placeholder="Search for Profiles" name="search-profile">
     <button type="submit">Search</button>
 </form>
+<a href="">Followers</a>: {{followers.count}}<br>
+<a href="">Following</a>: {{following.count}}<br>
+Posts: {{posts.count}}
 <form action="{% url 'profile-update' user.profile.pk %}" method="GET">
   <button type="submit">Edit Profile</button>
 </form>
@@ -31,7 +31,8 @@
         alt="{{ user.username }}" width="200px" height="200px">
   {% endif %}
   <p><strong>{{user.first_name}} {{user.last_name}}</strong></p>
-  <p>Bio: {{user.profile.bio}}</p>
+  <p>Bio: {{user.profile.bio}}<br>
+
   <a href="{% url 'post-create' %}">Add New Post</a>
   {% if posts %}
     <p>These are your posts</p>
@@ -70,5 +71,4 @@
     <hr>
     {% endfor %}
   </ul>
-{% endif %}
 {% endblock %}
