--- a/blog/templates/blog/_base.html
+++ b/blog/templates/blog/_base.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>FaceBlog</title>
+    <title>{% block title %}Faceblog{% endblock %}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/styles.css' %}">
   </head>
-  <body>
+    <div class="navbar">
+      <a href="{% url 'home' %}">Home</a>
+      <form class="form-container" action="{% url 'dashboard' %}" method="POST">
+      {% csrf_token %}
+          {% for message in messages %}
+              <div class="message {{ message.tag }}">
+                  <strong>{{ message }}</strong>
+              </div>
+          {% endfor %}
+        <input type="text" placeholder="Search for Profiles" name="search-profile">
+          <button type="submit">Search</button>
+      </form>
+      <a href="{% url 'dashboard' %}">Profile</a>
+      {% if request.user.is_authenticated %}
+      <form class="form-container" action="{% url 'logout' %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" value="Logout">Log Out</button>
+      </form>
+      {% else %}
+      <form action="{% url 'new_login' %}" method="POST">
+        {% csrf_token %}
+        <button type="submit" value="Login">Log In</button>
+      </form>
+      {% endif %}
+    </div>
     {% block content %}
     {% endblock %}
 </html>
