--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -1,27 +1,13 @@
 {% extends 'blog/_base.html' %}
-{% block content %}
 {% load static %}
+{% block content %}
 
-  <h2>Welcome {{user.username}}!</h2>
-<form action="{% url 'dashboard' %}" method="POST">
-{% csrf_token %}
-    {% for message in messages %}
-        <div class="message {{ message.tag }}">
-            <strong>{{ message }}</strong>
-        </div>
-    {% endfor %}
-  <input type="text" placeholder="Search for Profiles" name="search-profile">
-    <button type="submit">Search</button>
-</form>
+<h2>{{user.username}}</h2>
 <a href="{% url 'profile-followers' user.username %}">Followers</a>: {{followers.count}}<br>
 <a href="{% url 'profile-following' user.username %}">Following</a>: {{following.count}}<br>
 Posts: {{posts.count}}
 <form action="{% url 'profile-update' user.profile.pk %}" method="GET">
   <button type="submit">Edit Profile</button>
-</form>
-<form action="{% url 'logout' %}" method="POST">
-  {% csrf_token %}
-  <button type="submit" value="Logout">Log Out</button>
 </form>
   {% if user.profile.profile_picture %}
       <img src="{{ user.profile.profile_picture.url }}"
@@ -32,7 +18,6 @@ Posts: {{posts.count}}
   {% endif %}
   <p><strong>{{user.first_name}} {{user.last_name}}</strong></p>
   <p>Bio: {{user.profile.bio}}<br>
-
   <a href="{% url 'post-create' %}">Add New Post</a>
   {% if posts %}
     <p>These are your posts</p>
@@ -52,7 +37,7 @@ Posts: {{posts.count}}
     <li>Likes: {{ post.likes_count }}</li>
     <li>{{post.posted_date|timesince}} ago</li>
     <li>Description: {{post.description}}</li>
-    <form action="{% url 'post-like' post.pk%}" method="POST">
+    <form class="form-container" action="{% url 'post-like' post.pk%}" method="POST">
       {% csrf_token %}
       <button type="submit">
         {% if post.id in liked %}
@@ -62,7 +47,7 @@ Posts: {{posts.count}}
         {% endif%}
       </button>
     </form>
-    <form action="{% url 'comments' post.id %}" method="GET">
+    <form class="form-container" action="{% url 'comments' post.id %}" method="GET">
       {% csrf_token %}
       <button type="submit">Comments</button>
     </form>
