--- a/blog/templates/blog/external_user_profile.html
+++ b/blog/templates/blog/external_user_profile.html
@@ -11,6 +11,7 @@
 <a href="{% url 'profile-followers' external_user.username %}">Followers</a>: {{followers.count}}<br>
 <a href="{% url 'profile-following' external_user.username %}">Following</a>: {{following.count}}<br>
 Posts: {{posts.count}}</p>
+{% if request.user.is_authenticated%}
 <form action="{% url 'follow-unfollow' profile.id %}" method="POST">
   {% csrf_token %}
   <button type="submit">
@@ -21,6 +22,12 @@ Posts: {{posts.count}}</p>
     {% endif %}
   </button>
 </form>
+{% else %}
+  <form action="{% url 'follow-unfollow' profile.id %}" method="POST">
+    {% csrf_token %}
+    <button type="submit">Follow</button>
+  </form>
+{% endif %}
   {% if external_user.profile.profile_picture %}
       <img src="{{external_user.profile.profile_picture.url}}" alt="{{external_user.username}} profile picture" width="200px" height="200px">
   {% else %}
@@ -45,8 +52,6 @@ Posts: {{posts.count}}</p>
     {% endif %}
     <li>Likes: {{post.likes_count}}</li>
     <li>Posted: {{post.posted_date}}</li>
-    <li>Posted Hour(Server Time): {{post.posted_hour_server}}</li>
-    <li>Posted Hour(Client Time): {{post.posted_hour_client}}</li>
     <li>Description: {{post.description}}</li>
     <form action="{% url 'post-like' post.pk%}" method="POST">
       {% csrf_token %}
