--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,12 +1,38 @@
-<h1>Sign Up!</h1>
-{% for message in messages %}
-    <div class="message {{ message.tag }}">
-        {{ message }}
-    </div>
-{% endfor %}
-<form action="{% url 'signup' %}" method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" value="Signup">Sign Up</button>
-  <p>Already have an account? Log in <a href="{% url 'login' %}">Here</a></p>
-</form>
+{% extends 'blog/_base.html'%}
+{% block title %}
+FaceBlog log in or sign up
+{% endblock %}
+{% block content %}
+<style>
+  .navbar {
+    display: none;
+  }
+</style>
+<div class="container login-container">
+  <div class="signup-card">
+    <h1 class="big-logo">Faceblog | Sign Up!</h1>
+    {% for message in messages %}
+        <div class="message {{ message.tag }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+    <form action="{% url 'signup' %}" method="POST">
+        {% csrf_token %}
+        <div class="form-row">
+            {{ form.first_name }}
+            {{ form.last_name }}
+        </div>
+        <div class="form-row">
+            {{ form.email }}
+            {{ form.username }}
+        </div>
+        <div class="form-row">
+            {{ form.password1 }}
+            {{ form.password2 }}
+        </div>
+        <input class="btn btn-success form-control form-control-margin" type="submit" value="Sign Up">
+        <p>Already have an account? Log in <a href="{% url 'login' %}">Here</a></p>
+    </form>
+  </div>
+</div>
+{% endblock %}
